@@ -1,2 +1,3 @@
 DIST reek-1.2.8.gem 96256 SHA256 1b36a778d0a0f9803031eab1424ac053fb8de1a7834ddf5c4f6b04acdb325022 SHA512 acf75e0f733265e30e7ea7383d353954fac7f5dce678e0ea00d35ca415ca99e065f0b4aa28343807b8bf10e18a9659f58415d5a5629874718d01ffdf67c8ba9e WHIRLPOOL 93d575ae7d19d83e2127084861270cb6e4c13c79c3f2a526ab04824616cb16590d9e038f4717be0108aea1e40ac1c29aee1b9aea07bf677114c663df7a664817
 DIST reek-1.3.1.gem 100864 SHA256 834c71ab1ebe4f7c84d326bf3107bedd046724dacb03a6d53332100771fb756a SHA512 c308248f91a7bebc7d9081106f590256a0667469217eb8cae260a704f1686ffeb7090ea150de7ea137a3ef7e42e98855f0e812545e2aa35c6bf123a0e6027b77 WHIRLPOOL 5b1a33ca25e74c7187dd8318ddf851108fed4ad64a24f3a9a2ae99a3281e3ae87a69b47da79566197d4be17da4e805536018a655088225ee7f10e04a4d28175d
+DIST reek-1.3.8.gem 105984 SHA256 194d14701010308fa445bb6843452e7e7da816c39d33c5852e69af0cddf5ba8a SHA512 427b2d4bb0e96803a0614bf044e2e986f195a5dae9e5a302014f49a9a12b879f9cd05864a65fe46e4d4199fb8ad3ffe179128d566d61616b5738820cf96c7db2 WHIRLPOOL 39d7acce1d62feb80c645ad5372f3468882138dd50e89a4fd6ada4afa5543c72e3f53378e4df45e9f447ccba3ed561c8751efc2fc7852986713fc8d57447e691
