@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/reek
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*reek-1.3.8 (15 Aug 2014)
+
+  15 Aug 2014; Hans de Graaff <graaff@gentoo.org> +reek-1.3.8.ebuild:
+  Version bump. Add ruby20, ruby21.
 
 *reek-1.3.1 (21 Jun 2013)
 
